<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PizzaParty</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="_10">10</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="calculate">Calculate</string>
    <string name="total_pizzas">Total pizzas: %d</string>
    <string-array name="hunger_array">
        <item>Light</item>
        <item>Medium</item>
        <item>Ravenous</item>
    </string-array>
</resources>